--- a/Pay O'Clock/Base.lproj/Main.storyboard
+++ b/Pay O'Clock/Base.lproj/Main.storyboard
@@ -113,5 +113,42 @@
             </objects>
             <point key="canvasLocation" x="53.600000000000001" y="27.436281859070466"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="O6b-vk-T6p">
+            <objects>
+                <viewController id="DS7-m4-Ty1" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ooE-Ww-M1M">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SXO-cW-bE4">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="72" id="mgb-ai-GJ0">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="72"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mgb-ai-GJ0" id="UGi-R5-JZ1">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="71.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Uud-cA-rRY" firstAttribute="bottom" secondItem="SXO-cW-bE4" secondAttribute="bottom" id="Jrk-iE-KZB"/>
+                            <constraint firstItem="SXO-cW-bE4" firstAttribute="leading" secondItem="Uud-cA-rRY" secondAttribute="leading" id="Q3j-xY-6RA"/>
+                            <constraint firstItem="Uud-cA-rRY" firstAttribute="trailing" secondItem="SXO-cW-bE4" secondAttribute="trailing" id="Wl2-xh-gFZ"/>
+                            <constraint firstItem="SXO-cW-bE4" firstAttribute="top" secondItem="Uud-cA-rRY" secondAttribute="top" id="g5K-8i-X2x"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Uud-cA-rRY"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FHj-79-OW1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="816.79999999999995" y="26.53673163418291"/>
+        </scene>
     </scenes>
 </document>
