--- a/Pay O'Clock/Base.lproj/Main.storyboard
+++ b/Pay O'Clock/Base.lproj/Main.storyboard
@@ -113,10 +113,10 @@
             </objects>
             <point key="canvasLocation" x="53.600000000000001" y="27.436281859070466"/>
         </scene>
-        <!--View Controller-->
+        <!--Saved Card Alarms Table View Controller-->
         <scene sceneID="O6b-vk-T6p">
             <objects>
-                <viewController id="DS7-m4-Ty1" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SavedCardAlarmsTableViewController" id="DS7-m4-Ty1" customClass="SavedCardAlarmsTableViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ooE-Ww-M1M">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
