--- a/Pay O'Clock/Base.lproj/Main.storyboard
+++ b/Pay O'Clock/Base.lproj/Main.storyboard
@@ -173,11 +173,11 @@
             </objects>
             <point key="canvasLocation" x="2207" y="623"/>
         </scene>
-        <!--Item-->
+        <!--Add Details-->
         <scene sceneID="klf-Yx-hyW">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zeD-hN-LaM" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="v48-al-YMK"/>
+                    <tabBarItem key="tabBarItem" title="Add Details" id="v48-al-YMK"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OAH-tY-pfq">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -192,11 +192,11 @@
             </objects>
             <point key="canvasLocation" x="997.60000000000002" y="-152.47376311844079"/>
         </scene>
-        <!--Item-->
+        <!--Saved Alarms-->
         <scene sceneID="fbz-KK-7Ev">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XPX-j1-RQc" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="Da0-U2-ZYw"/>
+                    <tabBarItem key="tabBarItem" title="Saved Alarms" id="Da0-U2-ZYw"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1pG-gA-1h1">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
