--- a/Pay O'Clock/Base.lproj/Main.storyboard
+++ b/Pay O'Clock/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Pay O'Clock-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pay_O_Clock" customModuleProvider="target" sceneMemberID="viewController">
@@ -104,7 +104,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="wEA-lS-Q97"/>
+                    <navigationItem key="navigationItem" title="Pay O'Clock" id="wEA-lS-Q97"/>
                     <connections>
                         <outlet property="lastFourDigits" destination="5Dk-Nt-HOj" id="9vy-Br-BaB"/>
                         <outletCollection property="dateField" destination="TDl-xu-EVH" collectionClass="NSMutableArray" id="GJ5-Ld-eaz"/>
