--- a/Pay O'Clock/Base.lproj/Main.storyboard
+++ b/Pay O'Clock/Base.lproj/Main.storyboard
@@ -13,7 +13,6 @@
         <!--Pay O'Clock-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="AddAlarmViewController" id="BYZ-38-t0r" customClass="AddAlarmViewController" customModule="Pay_O_Clock" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="56c-P6-WqT">
                         <rect key="frame" x="0.0" y="0.0" width="667" height="619"/>
@@ -105,7 +104,8 @@
                                                 <state key="normal" title="Add"/>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" red="0.57414853570000002" green="0.57416242360000003" blue="0.57415497299999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="tintColor" red="0.076685495670000006" green="0.47192865610000001" blue="0.96561425919999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstItem="5Dk-Nt-HOj" firstAttribute="top" secondItem="Gue-bd-1u2" secondAttribute="bottom" constant="25.5" id="0rf-tg-rLE"/>
                                             <constraint firstItem="PFz-eF-h9L" firstAttribute="top" secondItem="TDl-xu-EVH" secondAttribute="bottom" constant="20" id="1aA-ig-Xqf"/>
@@ -154,6 +154,7 @@
                         <outletCollection property="dateField" destination="TDl-xu-EVH" collectionClass="NSMutableArray" id="GJ5-Ld-eaz"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1931" y="-491"/>
         </scene>
@@ -238,7 +239,7 @@
                     <tabBarItem key="tabBarItem" title="Add Details" id="v48-al-YMK"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OAH-tY-pfq">
-                        <rect key="frame" x="0.0" y="0.0" width="667" height="32"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
