--- a/Pay O'Clock/Base.lproj/Main.storyboard
+++ b/Pay O'Clock/Base.lproj/Main.storyboard
@@ -94,7 +94,7 @@
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G7N-4H-Wg5">
                                                 <rect key="frame" x="258.5" y="352" width="150" height="40"/>
-                                                <color key="backgroundColor" red="0.89155413864162436" green="0.23955578104304268" blue="0.18730324737395135" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="150" id="VHI-gW-CB6"/>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="Xs4-3S-nRf"/>
